--- a/packages/ckeditor5-email/package.json
+++ b/packages/ckeditor5-email/package.json
@@ -15,23 +15,23 @@
   "dependencies": {
     "ckeditor5": "44.1.0",
     "@ckeditor/ckeditor5-core": "44.1.0",
-    "@ckeditor/ckeditor5-utils": "44.1.0",
-    "@ckeditor/ckeditor5-table": "44.1.0",
+    "@ckeditor/ckeditor5-font": "44.1.0",
     "@ckeditor/ckeditor5-list": "44.1.0",
-    "@ckeditor/ckeditor5-font": "44.1.0"
+    "@ckeditor/ckeditor5-table": "44.1.0",
+    "@ckeditor/ckeditor5-utils": "44.1.0"
   },
   "devDependencies": {
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "@ckeditor/ckeditor5-editor-classic": "44.1.0",
-    "@ckeditor/ckeditor5-source-editing": "44.1.0",
-    "@ckeditor/ckeditor5-essentials": "44.1.0",
-    "@ckeditor/ckeditor5-paragraph": "44.1.0",
-    "@ckeditor/ckeditor5-heading": "44.1.0",
     "@ckeditor/ckeditor5-basic-styles": "44.1.0",
+    "@ckeditor/ckeditor5-editor-classic": "44.1.0",
+    "@ckeditor/ckeditor5-essentials": "44.1.0",
+    "@ckeditor/ckeditor5-heading": "44.1.0",
+    "@ckeditor/ckeditor5-highlight": "44.1.0",
     "@ckeditor/ckeditor5-image": "44.1.0",
-    "@ckeditor/ckeditor5-highlight": "44.1.0"
+    "@ckeditor/ckeditor5-paragraph": "44.1.0",
+    "@ckeditor/ckeditor5-source-editing": "44.1.0"
   },
   "author": "CKSource (http://cksource.com/)",
   "license": "SEE LICENSE IN LICENSE.md",
