--- a/packages/ckeditor5-email/package.json
+++ b/packages/ckeditor5-email/package.json
@@ -44,6 +44,7 @@
   },
   "files": [
     "dist",
+    "build",
     "lang",
     "src/**/*.js",
     "src/**/*.d.ts",
@@ -52,6 +53,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
+    "dll:build": "webpack",
     "build": "tsc -p ./tsconfig.json",
     "build:dist": "node ../../scripts/nim/build-package.mjs"
   }
