--- a/packages/ckeditor5-typing/package.json
+++ b/packages/ckeditor5-typing/package.json
@@ -36,6 +36,7 @@
     "@ckeditor/ckeditor5-paragraph": "44.1.0",
     "@ckeditor/ckeditor5-table": "44.1.0",
     "@ckeditor/ckeditor5-undo": "44.1.0",
+    "@ckeditor/ckeditor5-widget": "^44.1.0",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
