Notify about CI failures on `master-it84` branch.

--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -336,6 +336,7 @@ workflows:
             branches:
               only:
                 - master
+                - master-it84
                 - stable
                 - release
 
