--- a/packages/ckeditor5-fullscreen/package.json
+++ b/packages/ckeditor5-fullscreen/package.json
@@ -26,6 +26,7 @@
     "@ckeditor/ckeditor5-code-block": "44.1.0",
     "@ckeditor/ckeditor5-core": "44.1.0",
     "@ckeditor/ckeditor5-dev-utils": "^46.0.0",
+    "@ckeditor/ckeditor5-document-outline": "^44.1.0",
     "@ckeditor/ckeditor5-easy-image": "44.1.0",
     "@ckeditor/ckeditor5-find-and-replace": "44.1.0",
     "@ckeditor/ckeditor5-font": "44.1.0",
@@ -41,6 +42,7 @@
     "@ckeditor/ckeditor5-mention": "44.1.0",
     "@ckeditor/ckeditor5-page-break": "44.1.0",
     "@ckeditor/ckeditor5-paste-from-office": "44.1.0",
+    "ckeditor5-real-time-collaboration": "44.1.0",
     "@ckeditor/ckeditor5-remove-format": "44.1.0",
     "@ckeditor/ckeditor5-show-blocks": "44.1.0",
     "@ckeditor/ckeditor5-source-editing": "44.1.0",
