--- a/packages/ckeditor5-icons/package.json
+++ b/packages/ckeditor5-icons/package.json
@@ -33,7 +33,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build": "tsc -p ./tsconfig.json && node ../../scripts/update-icons-typings.mjs",
+    "build": "tsc --build --force ./tsconfig.json && node ../../scripts/update-icons-typings.mjs",
     "build:dist": "node ../../scripts/nim/build-package.mjs"
   }
 }
