--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "@listr2/prompt-adapter-inquirer": "^2.0.16",
     "@ocular-d/vale-bin": "^2.29.1",
     "@webspellchecker/wproofreader-ckeditor5": "^3.0.0",
-    "@wiris/mathtype-ckeditor5": "^8.10.0",
+    "@wiris/mathtype-ckeditor5": "8.12.0",
     "acorn": "^8.11.3",
     "assert": "^2.0.0",
     "chalk": "^5.0.0",
