--- a/packages/ckeditor5-table/package.json
+++ b/packages/ckeditor5-table/package.json
@@ -25,11 +25,13 @@
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "44.3.0",
+    "@ckeditor/ckeditor5-autoformat": "44.3.0",
     "@ckeditor/ckeditor5-basic-styles": "44.3.0",
     "@ckeditor/ckeditor5-block-quote": "44.3.0",
     "@ckeditor/ckeditor5-dev-utils": "^47.0.0",
     "@ckeditor/ckeditor5-editor-classic": "44.3.0",
     "@ckeditor/ckeditor5-editor-multi-root": "44.3.0",
+    "@ckeditor/ckeditor5-essentials": "44.3.0",
     "@ckeditor/ckeditor5-heading": "44.3.0",
     "@ckeditor/ckeditor5-highlight": "44.3.0",
     "@ckeditor/ckeditor5-horizontal-line": "44.3.0",
